# ams-lang

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ams_install_linux.sh  ams_install_windows.ps1  install_dependency_linux.sh
.github/ISSUE_TEMPLATE/: bug.md  config.yml  documentation.md  feature.md  help.md  others.md  task.md
examples/: basic_operators.ams  conditional_statements.ams  hello_world.ams  logfile_demo.ams  runtime_demo.ams  test.ams
examples/logfile_demo/: QUICKSTART.md  README.md  quick_run.ps1  run_demo.ps1
grammar/: AMS.g4
include/ams/compiler/: CodeGen.hpp
include/ams/interpreter/: Evaluator.hpp
include/core/builder/: AST.hpp  Builder.hpp  builder.hpp
include/core/compiler/: Generator.hpp  SemanticAnalyzer.hpp
include/core/supports/: caseCaptilizeInputStream.hpp
include/runtime/: event_bus.hpp  log_source_integration.hpp  logger.hpp  runtime.hpp  scheduler.hpp  signal_context.hpp  snapshot.hpp  source_integration.hpp  track_copy_manager.hpp  variable_registry.hpp
include/stdlib/io/: console.hpp
include/stdlib/source/: README.md  error.hpp  filter_criteria.hpp  filter_engine.hpp  log_data.hpp  log_file.hpp  log_record.hpp  log_source.hpp  parser.hpp  pattern_matcher.hpp  pretty_printer.hpp
src/compiler/: CodeGen.cpp
src/driver/: main.cpp
